Added Roles; minor improvements
